--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moduleB",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moduleA": "github:cdbean/moduleA"
+    "moduleA": "github:cdbean/moduleA#v2"
   }
 }
