--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moduleA": "github:cdbean/moduleA#v2"
+    "moduleA": "github:imdongchen/moduleA#v2"
   }
 }
